erDiagram
    PERFILES ||--o| PRESUPUESTOS : declara
    PERFILES ||--o{ COMPROMISOS : registra
    PERFILES ||--o{ INGRESOS_EXTRA : registra
    PERFILES ||--o| METAS_AHORRO : define
    PERFILES ||--o{ PLANES : genera
    PLANES ||--|{ ASIGNACIONES_SEMANALES : contiene

    PERFILES {
        uuid id PK
        text correo
        timestamptz creado_en
    }
    PRESUPUESTOS {
        uuid id PK
        uuid usuario_id FK
        numeric monto_semanal
        smallint dia_inicio_semana
    }
    COMPROMISOS {
        uuid id PK
        uuid usuario_id FK
        text denominacion
        numeric monto
        date fecha_limite
        smallint ocurrencias
        timestamptz creado_en
    }
    INGRESOS_EXTRA {
        uuid id PK
        uuid usuario_id FK
        numeric monto
        date fecha
        timestamptz creado_en
    }
    METAS_AHORRO {
        uuid id PK
        uuid usuario_id FK
        numeric monto_objetivo
        date fecha_objetivo
    }
    PLANES {
        uuid id PK
        uuid usuario_id FK
        timestamptz generado_en
        date fecha_referencia
        date inicio_horizonte
        date fin_horizonte
        numeric meta_monto_objetivo
        date meta_fecha_objetivo
        boolean meta_viable
        numeric ahorro_posible
        numeric faltante_meta
        jsonb advertencias
        text explicacion
    }
    ASIGNACIONES_SEMANALES {
        uuid id PK
        uuid plan_id FK
        smallint numero_semana
        date fecha_inicio
        date fecha_fin
        numeric ingresos_extra
        numeric monto_disponible
        numeric monto_apartado
        numeric monto_vencimientos
        numeric remanente
        numeric aporte_meta
        boolean sobrecargada
        boolean en_deficit
        jsonb detalle
    }
